force-app/main/default/objects/Contact/fields/Honeytoken_Id__c.field-meta.xml
<CustomField>
    <fullName>Honeytoken_Id__c</fullName>
    <label>Honeytoken Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>