force-app/main/default/objects/Contact/fields/SSN_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_Four__c</fullName>
    <label>SSN Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>